--- a/jade/index.jade
+++ b/jade/index.jade
@@ -20,6 +20,7 @@ html
 					img(src="images/filler-03.png" alt="").filler.filler-03
 					img(src="images/filler-04.png" alt="").filler.filler-04
 					img(src="images/filler-05.png" alt="").filler.filler-05
+					img(src="images/filler-08.svg" alt="").filler.filler-08
 
 				.main-select.select-wrap
 					select(name="select city")
@@ -101,3 +102,4 @@ html
 		.popup.popup_finish
 			.popup-wrap
 				.popup-title Спасибо за регистрацию!
+				
