--- a/css/style.scss
+++ b/css/style.scss
@@ -49,8 +49,13 @@
 
 
 $orange:#FF8A35;
-$purple:#5705F8;
-$blue:#018FB6;
+$purple:#043BFF;
+$blue:#043BFF;
+$tour1color:#8103FF;
+$tour2color:#2BC6C6;;
+$tour3color:#000000;
+$tour4color:#61D05F;;
+$tour5color:#FFA95A;;
 //Mixins 
 @mixin transform ($style: translate(0,-50%)){
 	-webkit-transform: $style;
@@ -167,7 +172,7 @@ input[type=submit], input[type=button] {
 		display: flex;
 		align-items:flex-start;
 		justify-content:space-between;
-		padding:37px 60px 0 71px;
+		padding: 32px 60px 0 30px;
 	}
 	&-logo{
 		display: inline-block;
@@ -176,7 +181,7 @@ input[type=submit], input[type=button] {
 		}
 		&_01{
 			margin-right: 32px;
-			margin-top: 5px;
+			margin-top: 0px;
 		}
 		&_02{
 
@@ -194,6 +199,7 @@ input[type=submit], input[type=button] {
 		height:60px;
 		line-height: 60px;
 		padding:0 25px;
+		margin-top:5px;
 	}
 }
 
@@ -205,6 +211,12 @@ input[type=submit], input[type=button] {
 	&_orange{
 		background-color: $orange;
 		box-shadow: 0px 10px 15px rgba(255, 208, 153, 0.2);
+	}
+	&_disabled{
+		pointer-events:none;
+	    box-shadow: none;
+	    background-color: #F5F5F5!important;
+	    color: #929090!important;
 	}
 }
 .select2{
@@ -279,14 +291,19 @@ input[type=submit], input[type=button] {
 }
 
 .main{
-	background: linear-gradient(180deg, #00AAB5 0%, #006CB5 100%);
+	background: url(../images/main-bg.svg);
+
 	background-repeat: no-repeat;
 	background-size: cover;
 	&-title{
 		position: relative;
-		padding-top: 206px;
+		padding-top: 186px;
 		text-align: center;
-		margin-bottom: 43px;
+		margin-bottom: 30px;
+		&-img{
+			position:relative;
+			z-index:1;
+		}
 	}
 	&-select{
 		//@include transition(.3s);
@@ -312,7 +329,7 @@ input[type=submit], input[type=button] {
 		}
 	}
 	&-games{
-		margin-bottom: 102px;
+		margin-bottom: 37px;
 		&-wrap{
 			padding:0 108px;
 			display: flex;
@@ -342,9 +359,10 @@ input[type=submit], input[type=button] {
 				font-family:'GraublauSlab-HeavyItalic';
 				text-align: center;
 				color:$blue;
+				margin-top:20px;
 				font-size: 180px;
 				line-height: 167px;
-				margin-bottom: 37px;
+				margin-bottom: 17px;
 
 			}
 			&-info{
@@ -403,11 +421,12 @@ input[type=submit], input[type=button] {
 		}
 		&-unit{
 			width:453px;
+			margin-bottom: 76px;
 			&-title{
 				font-family:'GraublauSlab-Bold';
 				font-size: 30px;
 				line-height: 30px;
-				margin-bottom: 33px;
+				margin-bottom: 27px;
 			}
 			&-text{
 				opacity: .9;
@@ -428,7 +447,7 @@ input[type=submit], input[type=button] {
 			&:nth-child(5){
 				order:4;
 			}
-			margin-bottom: 85px;
+			
 		}
 	}
 }
@@ -438,7 +457,7 @@ input[type=submit], input[type=button] {
 	&-01{
 		left:50%;
 		transform:translateX(-50%);
-		top:82px;
+		top:37px;
 	}
 	&-02{
 		top:132px;
@@ -449,12 +468,17 @@ input[type=submit], input[type=button] {
 		top:131px;
 	}
 	&-04{
-		top:calc(100% + 7px);
+		top:calc(100% - 18px);
 		left:57px;
 	}
 	&-05{
 		right:202px;
-		bottom:-139px;
+		    bottom: -126px;
+	}
+	&-08{
+		left:50%;
+		transform:translateX(-50%);
+		top:78px;	
 	}
 }
 .popup{
@@ -489,7 +513,7 @@ input[type=submit], input[type=button] {
 
 	}
 	&-form{
-		border-radius: 6px;
+		
 		background-color: #fff;
 		padding:83px 65px 60px 65px;
 		input{
@@ -537,11 +561,43 @@ input[type=submit], input[type=button] {
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
+	&_rules{
+		backdrop-filter: blur(10px);
+		background-color:rgba(0, 0, 0, 0.9);
+		.button{
+			width:120px;
+			margin:0 auto;
+			height:60px;
+			line-height: 60px;
+		}
+		.popup{
+			&-wrap{
+				width:410px;
+			}
+			&-title{
+				margin-bottom: 42px;
+				font-size: 30px;
+				line-height: 31px;
+			}
+			&-text{
+				font-size: 14px;
+				line-height: 20px;
+				margin-bottom: 40px;
+				p{
+					margin-bottom: 20px;
+				}
+			}
+		}
+	}
 }
 .test{
-	background-image: url(../images/test-bg.svg);
-	background-size: cover;
-	min-height: 100vh;
+	min-height: 100vh;	
+	display: block;
+	&-wrap{
+		background-image: url(../images/test-bg.svg);
+		background-size: cover;
+		min-height: 100vh;	
+	}
 	&-filler{
 		position: absolute;
 		&-01{
@@ -550,8 +606,8 @@ input[type=submit], input[type=button] {
 			width:77px;
 		}
 		&-02{
-			left: calc(43% - 4px);
-		    top: -24px;
+			    left: calc(44% - -4px);
+    		top: -49px;
 		    width: 210px;
 		}
 		&-03{
@@ -569,14 +625,25 @@ input[type=submit], input[type=button] {
 		}
 	}
 	&-header{
-		padding: 0 72px;
+		padding: 0 45px;
 		padding-top: 37px;
+		.header-logo{
+			img{
+				max-width:100%;
+			}
+			&_01{
+				width:89.43px;
+			}
+			&_02{
+				width:90.43px;
+			}
+		}
 	}
 	&-body{
 		width:100%;
 		height:477px;
 		position: relative;
-		padding:0 77px 0 71px;
+		padding:0 77px 0 30px;
 		display: flex;
 		justify-content:space-between;
 		
@@ -586,11 +653,19 @@ input[type=submit], input[type=button] {
 			height:calc(100vh - 104px);
 			min-height: 500px;
 			align-items:center;
+			padding-bottom: 60px;
+		}
+		&_register{
+			.test-filler{
+				z-index: 2;
+			}
 		}
 	}
 	&-info{
-		width:325px;
-		color:#2B2A29;
+		width:329px;
+		display: flex;
+		flex-direction:column;
+		justify-content:center;
 		&-unit{
 			font-family:'GraublauSlab-Heavy';
 			font-size: 50px;
@@ -599,6 +674,20 @@ input[type=submit], input[type=button] {
 		&-text{
 			margin-top: 30px;
 			margin-bottom: 36px;
+			&_asterisk{
+				margin-top: 48px;
+				padding-left: 37px;
+				font-size: 16px;
+				line-height: 23px;
+				position: relative;
+				margin-bottom: 14px;
+				&:before{
+					content:url(../images/icon-asterisk.svg);
+					position: absolute;
+					top:2px;
+					left:6px;
+				}
+			}
 		}
 		&-button{
 			height:50px;
@@ -607,10 +696,55 @@ input[type=submit], input[type=button] {
 			font-size: 16px;
 			color:#fff;
 		}
+		&-checkbox{
+			cursor: pointer;
+			font-family:'GraublauSansDisplay-Regular';
+			font-size: 16px;
+			input{
+				position: absolute;
+			}
+			a{
+				text-decoration: underline;
+			}
+			input:checked + span{
+				&:after{
+					opacity: 1;
+				}
+			}
+			span{
+				padding-left: 36px;
+				display: inline-block;
+				position: relative;
+				&:before{
+					border-radius: 3px;
+					content:"";
+					position: absolute;
+					top:0;
+					left:0;
+					width:26px;
+					height:26px;
+					background-color: #fff;
+				}
+				&:after{
+					@include transition(.3s);
+					opacity: 0;
+					position: absolute;
+					content:url(../images/icon-check.svg);
+					top:0;
+					left:7px;
+
+				}
+			}
+		}
+
 	}
 	&-content{
 		font-family:'GraublauSansDisplay-Regular';
 		width:450px;
+		@include transition(.3s);
+		&_final{
+			margin-top: 85px;
+		}
 		&-progress{
 			margin-left: -2px;
 			align-items:center;
@@ -746,11 +880,11 @@ input[type=submit], input[type=button] {
 						width:224px;
 						background-color: #fff;
 						margin-bottom: 2px;
-						border-radius: 6px;
+						
 						text-align: center;
 						line-height: 79px;
 						height:79px;
-						color:#019BB6;
+						color:$blue;
 						position: relative;
 						
 						@include transition(.5s);
@@ -760,7 +894,7 @@ input[type=submit], input[type=button] {
 				}
 				&-results{
 
-					border-radius: 6px;
+					
 					
 					background-color: #fff;
 					display: block;
@@ -779,10 +913,10 @@ input[type=submit], input[type=button] {
 						@include transition(.5s);
 						font-size: 16px;
 						padding:0 15px;
-						border-radius: 6px;
+						
 						height:78px;
 						line-height: 78px;
-						background-color: $purple;
+						background-color: $orange;
 						position: relative;
 						transform:translateX(50%);
 						opacity: 0;
@@ -837,7 +971,7 @@ input[type=submit], input[type=button] {
 							background-image: url(../images/smile-wrong.svg);
 						}
 						&_correct{
-							color:#01A9B6;
+							color:#00CC39;
 							&:before{
 								opacity: 1;
 							}
@@ -906,10 +1040,164 @@ input[type=submit], input[type=button] {
 					&-wrap{
 						display: flex;
 					}
+					&_hidden{
+						opacity: 0;
+						visibility: hidden;
+
+					}
 				}
 			} 
+			&-button{
+				height:48px;
+				line-height: 48px;
+				opacity: 0;
+				visibility: hidden;
+				&_shown{
+					opacity: 1;
+					visibility: visible;
+				}
+			}
 		}
 
+	}
+	&-register{
+		width:460px;
+		margin-right: auto;
+		margin-left: 214px;
+
+		.popup-form{
+			margin-top: 78px;
+			position: relative;
+			z-index: 0;
+			padding-top: 44px;
+			padding-bottom: 34px;
+			input{
+				&:not([type="submit"]){
+					font-size: 16px;
+					color:$blue;
+					margin-bottom: 36px;
+					&:last-child{
+						margin-bottom: 0;
+					}
+				}
+				&[type="submit"]{
+					left:50%;
+					bottom:0;
+					transform:translateX(-50%)translateY(50%);
+					position:absolute;
+				}
+
+			}
+			.input-wrap{
+				position: relative;
+				margin-bottom: 36px;
+				&:last-child{
+					margin-bottom: 0;
+				}
+				&_error{
+					.input-wrap-error{
+						opacity: 1;
+						visibility: visible;
+					}
+				}
+				&-error{
+					white-space: nowrap;
+					left:50%;
+					transform:translateX(-50%);
+					border-radius: 6px;
+					@include transition(.3s);
+					opacity: 0;
+					visibility: hidden;
+					bottom:100%;
+					padding:10px 20px;
+					color:#000;
+					position: absolute;
+					background: #FFFFFF;
+					box-shadow: 0px 4px 14px rgba(4, 59, 255, 0.2);
+					&:before{
+						position: absolute;
+						top:100%;
+						left:50%;
+						transform:translateX(-50%);
+						content:"";
+						border-top:12px solid #fff;
+						border-left:12px solid transparent;
+						border-right:12px solid transparent;
+					}
+				}
+			}
+			::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+			    color:$blue;
+			    opacity: 1; /* Firefox */
+			}
+
+			:-ms-input-placeholder { /* Internet Explorer 10-11 */
+			    color:$blue;
+			}
+
+			::-ms-input-placeholder { /* Microsoft Edge */
+			    color:$blue;
+			}
+		}
+	}
+	&-main{
+		&-introUnit{
+			min-height: 100vh;
+			display: block;
+			&_01{
+				background:$tour1color;
+				.test-main-introUnit-info{
+					width:430px;
+				}
+			}
+			&-container{
+				display: flex;
+				min-height: 100vh;
+				align-items:center;
+				position: relative;
+				margin:0 auto;
+				max-width: 1132px;
+			}
+			&-info{
+				margin-left: 65px;
+				width:390px;
+
+			}
+			&-navigation{
+				margin-bottom: 40px;
+				&-divider{
+					display: inline-block;
+					position: relative;
+					width:118px;
+					margin:0 15px 0 9px;
+					&:before{
+						content:"";
+						position: absolute;
+						top:-4px;
+						
+						left:0;
+						width:100%;
+						height:1px;
+						background-color: #fff;
+					}
+				}
+			}
+			&-title{
+				font-family:'GraublauSlab-Heavy';
+				font-size: 50px;
+				line-height: 51px;
+				margin-bottom: 20px;
+			}
+			&-text{
+				margin-bottom: 35px;
+				min-height: 75px;
+			}
+			&-button{
+				height:48px;
+				line-height: 48px;
+				width:170px;
+			}
+		}
 	}
 
 }
